--- a/MvcNetCoreEF/Views/Shared/_Layout.cshtml
+++ b/MvcNetCoreEF/Views/Shared/_Layout.cshtml
@@ -28,6 +28,11 @@
                             asp-action="Index">Hospitales EF</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark"
+                               asp-controller="Empleados"
+                               asp-action="IncrementoSalarial">Empleados EF</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
